# ShoeHuggger

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
description/stls/: base_link.STL  camera.STL  lidar.STL  wing_left.STL
description/urdf/: robot_v4.urdf
firmware/: README.md
launch/: alienbot.rviz  alienbot_slam.launch.py  launch_alienbot.sh  view_urdf.launch.py
media/: demo_video_link.txt
pi/: alienbot.service  alienbot_bringup.py  start_alienbot.sh  test_gix_motor.py
src/alienbot_vision/: package.xml  setup.cfg  setup.py
src/alienbot_vision/alienbot_vision/: alienbot_ui.py  person_detector.py  person_follower.py  person_follower_calm.py  teleop_hold.py
turtlebot4_ws/: alienbot_slam.launch.py  frames_2026-03-18_14.36.57.gv  launch_alienbot.sh  view_urdf.launch.py
turtlebot4_ws/.devcontainer/: Dockerfile  devcontainer.json
turtlebot4_ws/src/alienbot_description/stls/: wheel_left.STL  wheel_right.STL  wing_right.STL
turtlebot4_ws/src/alienbot_vision/: package.xml  setup.cfg  setup.py
turtlebot4_ws/src/alienbot_vision/alienbot_vision/: alienbot_ui.py  person_follower.py  person_follower_calm.py  teleop_hold.py
turtlebot4_ws/src/turtlebot4_simulator/turtlebot4_ignition_bringup/: CHANGELOG.rst
turtlebot4_ws/src/turtlebot4_simulator/turtlebot4_ignition_gui_plugins/: CHANGELOG.rst
turtlebot4_ws/src/turtlebot4_simulator/turtlebot4_ignition_toolbox/: CHANGELOG.rst
turtlebot4_ws/src/turtlebot4_simulator/turtlebot4_simulator/: CHANGELOG.rst
(+1 files in other folders)
