<?xml version="1.0"?>
<package format="3">
  <name>alienbot_vision</name>
  <version>0.0.1</version>
  <description>AlienBot person detection</description>
  <maintainer email="rushav@example.com">rushav</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>